# Cinder-Xtion

./: .gitignore
samples/BasicApp/proj/cmake/: CMakeLists.txt
samples/BasicApp/proj/cmake/modules/: FindOpenNI.cmake
samples/BasicApp/src/: BasicApp.cpp
src/: CinderXtion.cpp  CinderXtion.h
